[package]
name = "hypercore-protocol"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Szabolcs Berecz <szabolcs.berecz@gmail.com>"]
edition = "2018"

[dependencies]
blake2-rfc = "0.2.18"
quick-protobuf = "0.6"

[dev-dependencies]
data-encoding = "2.1.2"

[build-dependencies]
pb-rs = "0.8"
walkdir = "2"
