[package]
name = "hypercore-protocol"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Szabolcs Berecz <szabolcs.berecz@gmail.com>"]
edition = "2018"

[dependencies]
integer-encoding = "1.0.7"
log = "0.4.8"
protobuf = "2.8.0"
rust-crypto = "0.2.36"
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_trace"] }
slog-stdlog = "3.0.5"
sodiumoxide = "0.2.2"

[dev-dependencies]
data-encoding = "2.1.2"
env_logger = "0.6.2"
once_cell = "1.2.0"
rand = "0.7.0"
slog-scope = "4.1.2"
slog-term = "2.4.1"

[build-dependencies]
protobuf-codegen-pure = "2.8.0"
walkdir = "2"
